--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<h1>Assignment 1: My Profile</h1>
+
+<h2>Bio:</h2>
+<p>I was born in England and moved over to Australia when I was 7, while in Australia I have completed all high schooling through VCE and also undertook a VET subject at the Gordon which got me a partial completion of a cert 3 in information, digital media and technology. I then moved into university and began studying a Bachelor of Business in information systems. I am now in my final semester of a three-year degree.
+Outside of study I enjoy spending time chatting with mates online and playing a few games, taking my dogs for a walk, or I am out in the shed working on some sort of project. Whether that is fixing my car (again) or working on farm machinery or fixing up an old dirt bike. If it is mechanical or has an engine, I will tinker with it and try to get things going. However, this normally has varying levels of success.</p>
+
+<h2>What is your interest in IT? When did your interest in IT start? Was there a particular event or person that sparked your interest? Outline your IT experience (if any). </h2>
+<p>My interest in IT started when I was quite young as I first got into PC gaming on an old laptop, this led to me gradually saving up to buy the parts of a computer for myself. As I did not have much to spend, I built the computer myself to save money, and learned a thing or two along the way. Since then my interest was largely focused on IT hardware and putting things together and making them fire up for the first time. However as I have used computers more and more I have gradually begun to enjoy work with IT software more and more, this lead me to take up Information Technology in high school so that I could learn more for at home, this came in very handy for setting up our home internet and LAN. When I got to VCE I picked up VCE IT and a cert 3 in information, digital media, and technology at the Gordon. This proved great as I learned more and more about working with computers in a number of fields such as networking, hardware, software, security, some coding, and more.</p>
+
+<h2>Why did you choose to come to RMIT? </h2>
+<p>During high school, our class went around a number of universities as we began our VCE studies, these included Melbourne university, Deakin university, ACU, Victoria university, Monash, Swinburn and RMIT. Many of these options I ruled out due to the simple fact of travel time such as Monash and Swinburn, Melbourne university would have been a real struggle to get into, ACU and Victoria university didn’t really offer a course I was drawn towards. This left RMIT and Deakin, after attending open days for both and looking at courses for each I put RMIT as my 1st preference and Deakin as my second. Afterall, I was going to be studying a technology degree only one of those universities has technology in the name.</p>
+
+<h2>What do you expect to learn during your studies? </h2>
+<p>As I am already in my last semester of my studies, I already have a good idea of what I could expect to learn at university. However, I have been absolutely thrilled by the amount of practical skills and learning that I have done in a number of different classes. Unfortunately, now with COVID-19 there has been less of this kind of work, but it has still been thoroughly enjoyable none the less. For my final semester I am hoping that I will be able to finish off my core subjects and get a greater understanding in these topics, while at the same time brushing up on some more grounded and base level skills, as in IT in particular, these are often most overlooked. </p>
+
+<h2>Ideal Job</h2>
+
+<img src="IdealJob.jpg" alt="IdealJob">
+<p>https://www.seek.com.au/job/50322008?type=standout#searchRequestToken=f61bf496-d7d3-4a51-acc0-f75ae581046a</p>
+<p>https://www.seek.com.au/career-advice/role/systems-engineer</p> 
+
+<h3>Position Description:</h3>
+<p>My ideal job would be one similar to the position shown here. It is a role as a Senior Systems Engineer, preferably in a large business or corporation. This role involves managing large IT systems, providing IT support, implementing new technologies into existing systems, working with a small team, and implementing a variety of both hardware and software.</p>
+
+<h3>Required Skills:</h3>
+<p>To gain this position I would need skills, expertise, and experience with identifying, installing, and implementing IT hardware, software, network structure and providing IT support for employees. Other skills would include specific protocol and software related skills such as having the knowledge to use Windows, Azure networking, and directory services. </p>
+
+<h3>Current Skills:</h3>
+<p>Currently I have skills in IT hardware identification, diagnosis, installation, and troubleshooting. I have base understanding and skills for networking and network administration as well as detailed knowledge of utilizing windows for PC systems and a brief understanding of directory services. I also have other business and IT related skills such as Website and Application development, marketing, economics, business analysis and networking for businesses.</p>
+
+<h3>Plan to gain required skills:</h3>
+<p>I am hoping that once I have completed my studies at RMIT university I will have the knowledge and skills so that I can get and entry level position with a similar skill set to this position. I already have a solid foundation of the skills needed for this position shown above, but the main thing that I am lacking is the in the field experience. This is why I am hoping that if I can get into an entry level IT role, here I will be able to learn and further my skills and knowledge, all while working and gain industry experience.</p>
+
+
+<h2>Myers-Briggs test:</h2>
+<img src="Test1.jpg" alt="Test1">
+<p>https://www.16personalities.com/</p>
+
+<h2>Learning style test:</h2>
+<img src="Test2.jpg" alt="Test2">
+<p>http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml</p>
+
+<h2>Additional online test:</h2>
+<img src="Test3.jpg" alt="Test3">
+<p>https://www.opencolleges.edu.au/careers/career-quiz</p>
+
+<h2>Quiz review:</h2>
+<p>The results from all of these test point to logical thinking, practicality, and calmness. I feel that these are not far from the mark and I am glad that this final career test verified my own thoughts of careers that would fit me best. I think these results will lead me to try to avoid emotional thinking in teamwork and try to focus on the facts and details of the task at hand. Due to this I might try and find a group of varied people as this will mean that a more emotional thinking can consider the same issue or task from another perspective</p>
+
+</body>
+</html>
