--- a/IdealJob.HTML
+++ b/IdealJob.HTML
@@ -1,4 +1,4 @@
-<h2>Ideal Job</h2>
+<h1>Ideal Job</h1>
 
 <img src="IdealJob.jpg" alt="IdealJob">
   
@@ -17,3 +17,5 @@
 
 <h3>Plan to gain required skills:</h3>
 <p>I am hoping that once I have completed my studies at RMIT university I will have the knowledge and skills so that I can get and entry level position with a similar skill set to this position. I already have a solid foundation of the skills needed for this position shown above, but the main thing that I am lacking is the in the field experience. This is why I am hoping that if I can get into an entry level IT role, here I will be able to learn and further my skills and knowledge, all while working and gain industry experience.</p>
+
+<a href="https://nathan-askew.github.io/COSC1078/index.HTML">Home Page</a>
