--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-
+  
 <h1>Assignment 1: My Profile</h1>
 
 <div class="header">
