--- a/InterestInIT.HTML
+++ b/InterestInIT.HTML
@@ -12,4 +12,4 @@ Outside of study I enjoy spending time chatting with mates online and playing a 
 <h2>What do you expect to learn during your studies? </h2>
 <p>As I am already in my last semester of my studies, I already have a good idea of what I could expect to learn at university. However, I have been absolutely thrilled by the amount of practical skills and learning that I have done in a number of different classes. Unfortunately, now with COVID-19 there has been less of this kind of work, but it has still been thoroughly enjoyable none the less. For my final semester I am hoping that I will be able to finish off my core subjects and get a greater understanding in these topics, while at the same time brushing up on some more grounded and base level skills, as in IT in particular, these are often most overlooked. </p>
 
-<a href="https://nathan-askew.github.io/COSC1078/index.HTML">Home Page</a>
+<a href="https://nathan-askew.github.io/COSC1078/index.html">Home Page</a>
