--- a/Profile.HTML
+++ b/Profile.HTML
@@ -14,4 +14,4 @@
 <h2>Quiz review:</h2>
 <p>The results from all of these test point to logical thinking, practicality, and calmness. I feel that these are not far from the mark and I am glad that this final career test verified my own thoughts of careers that would fit me best. I think these results will lead me to try to avoid emotional thinking in teamwork and try to focus on the facts and details of the task at hand. Due to this I might try and find a group of varied people as this will mean that a more emotional thinking can consider the same issue or task from another perspective</p>
 
-<a href="https://nathan-askew.github.io/COSC1078/">Here</a>
+<a href="https://nathan-askew.github.io/COSC1078/index.html">Here</a>
