--- a/index.html
+++ b/index.html
@@ -7,33 +7,8 @@
 					<img id="nav-logo" src="images/Logo.png" alt="">
 					<ul class="list-unstyled text-uppercase menu-left">
 						<li><a class="nav-menu-item" href="index.html">home</a></li>
-						<li>
-							<a class="nav-menu-item" href="shop.html">shop <i class="fa fa-angle-down"></i></a>
-							<ul class="list-unstyled text-uppercase dropdown">
-								<li><a href="shop.html">Sleep</a></li>
-								<li><a href="shop-detail.html">Walk</a></li>
-								<li><a href="cart.html">Play</a></li>
-								<li><a href="checkout.html">Dress</a></li>
-							</ul>
-						</li>
-						<li>
-							<a class="nav-menu-item" href="aboutus.html">About Us </a>
-						</li>
-						<li>
-							<a class="nav-menu-item" id="nav-menu-disabled" href="shop.html">Support<i class="fa fa-angle-down"></i></a>
-							<ul class="list-unstyled text-uppercase dropdown">
-								<li><a href="contact-us.html">Contact Us</a></li>
-								<li><a href="404page.html">Product Finder</a></li>
-								<li><a href="404page.html">FAQ</a></li>
-								<li><a href="404page.html">Terms & Conditions</a></li>
-							</ul>
-						</li>
-						<li class="nav-icon-user"><a class="nav-menu-item" href="#"><i class="icon-user"
-									aria-hidden="true"></i></a></li>
-						<li class="nav-icon-cart"><a class="nav-menu-item" href="#"><i class="far fa-heart"></i></i></a>
-						</li>
-						<li class="nav-icon-cart"><a class="nav-menu-item" href="cart.html"><i
-									class="fas fa-shopping-cart"></i></a></li>
+						<li><a class="nav-menu-item" href="shop.html">shop <i class="fa fa-angle-down"></i></a></li>
+						<li><a class="nav-menu-item" href="aboutus.html">About Us </a></li>
 					</ul>
 				</nav>
 			</div>
