--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="https://github.com/Nathan-Askew/COSC1078/images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Personal Information</h2>
 										<p>A bit of information about me, who I am, where I'm from and what I enjoy doing.</p>
