--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Myers-Briggs Test</h3>
+											<p>Determining your personality type</p>
+											<a href="https://www.16personalities.com/" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Learning Style Test</h3>
+											<p>Determin wheather you are a Auditory, Visual or Tactile learner.</p>
+											<a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Careers Test</h3>
+											<p>Find out what type of career would suit you best.</p>
+											<a href="https://www.opencolleges.edu.au/careers/career-quiz" class="special">Learn more</a>
 										</article>
 									</section>
 								</div>
