--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="personal-information.html">Personal Information</a></li>
+								<li><a href="it-interest.html">Interests in IT</a></li>
+								<li><a href="ideal-job.html">Ideal Job</a></li>
+								<li><a href="quiz-results.html">Quiz Results</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -54,7 +54,7 @@
 									<div class="content">
 										<h2 class="major">Personal Information</h2>
 										<p>A bit of information about me, who I am, where I'm from and what I enjoy doing.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="personal-information.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -66,7 +66,7 @@
 									<div class="content">
 										<h2 class="major">Interest in IT</h2>
 										<p>What is my interest in IT? What do I enjoy about it? When did this start? What sparked this interest?</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="it-interest.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -78,7 +78,7 @@
 									<div class="content">
 										<h2 class="major">Ideal Job</h2>
 										<p>What is my interest in IT? What do I enjoy about it? When did this start? What sparked this interest?</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="ideal-job.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
