--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<div class="content">
 										<h2 class="major">Personal Information</h2>
 										<p>A bit of information about me, who I am, where I'm from and what I enjoy doing.</p>
-										<a href="personal-information.html" class="special">Learn more</a>
+										<a href="personal-information.html">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -66,7 +66,7 @@
 									<div class="content">
 										<h2 class="major">Interest in IT</h2>
 										<p>What is my interest in IT? What do I enjoy about it? When did this start? What sparked this interest?</p>
-										<a href="it-interest.html" class="special">Learn more</a>
+										<a href="it-interest.html">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -78,7 +78,7 @@
 									<div class="content">
 										<h2 class="major">Ideal Job</h2>
 										<p>What is my interest in IT? What do I enjoy about it? When did this start? What sparked this interest?</p>
-										<a href="ideal-job.html" class="special">Learn more</a>
+										<a href="ideal-job.html">Learn more</a>
 									</div>
 								</div>
 							</section>
