--- a/it-interest.html
+++ b/it-interest.html
@@ -44,69 +44,24 @@
 						</div>
 					</section>
 
-				<!-- Wrapper -->
-					<section id="wrapper">
-
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic01.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Personal Information</h2>
-										<p>A bit of information about me, who I am, where I'm from and what I enjoy doing.</p>
-										<a href="personal-information.html" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic02.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Interest in IT</h2>
-										<p>What is my interest in IT? What do I enjoy about it? When did this start? What sparked this interest?</p>
-										<a href="it-interest.html" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic03.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Ideal Job</h2>
-										<p>What is my interest in IT? What do I enjoy about it? When did this start? What sparked this interest?</p>
-										<a href="ideal-job.html" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
 
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Profile</h2>
-									<p>Results from a number of online tests to determin my personality type, learning style and suggested career.</p>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Myers-Briggs Test</h3>
-											<p>Determining your personality type</p>
-											<a href="https://www.16personalities.com/" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Learning Style Test</h3>
-											<p>Determin wheather you are a Auditory, Visual or Tactile learner.</p>
-											<a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Careers Test</h3>
-											<p>Find out what type of career would suit you best.</p>
-											<a href="https://www.opencolleges.edu.au/careers/career-quiz" class="special">Learn more</a>
-										</article>
+									<h2 class="major">What is your interest in IT? When did your interest in IT start?</h2>
+									<p>My interest in IT started when I was quite young as I first got into PC gaming on an old laptop, this led to me gradually saving up to buy the parts of a computer for myself. As I did not have much to spend, I built the computer myself to save money, and learned a thing or two along the way. Since then my interest was largely focused on IT hardware and putting things together and making them fire up for the first time. However as I have used computers more and more I have gradually begun to enjoy work with IT software more and more, this lead me to take up Information Technology in high school so that I could learn more for at home, this came in very handy for setting up our home internet and LAN. When I got to VCE I picked up VCE IT and a cert 3 in information, digital media, and technology at the Gordon. This proved great as I learned more and more about working with computers in a number of fields such as networking, hardware, software, security, some coding, and more.</p>
+									</section>
+								</div>
+	
+								<div class="inner">
+									<h2 class="major">Why did you choose to come to RMIT?</h2>
+									<p>During high school, our class went around a number of universities as we began our VCE studies, these included Melbourne university, Deakin university, ACU, Victoria university, Monash, Swinburn and RMIT. Many of these options I ruled out due to the simple fact of travel time such as Monash and Swinburn, Melbourne university would have been a real struggle to get into, ACU and Victoria university didn’t really offer a course I was drawn towards. This left RMIT and Deakin, after attending open days for both and looking at courses for each I put RMIT as my 1st preference and Deakin as my second. Afterall, I was going to be studying a technology degree only one of those universities has technology in the name.</p>
+									</section>
+								</div>
+
+								<div class="inner">
+									<h2 class="major">What do you expect to learn during your studies?</h2>
+									<p>As I am already in my last semester of my studies, I already have a good idea of what I could expect to learn at university. However, I have been absolutely thrilled by the amount of practical skills and learning that I have done in a number of different classes. Unfortunately, now with COVID-19 there has been less of this kind of work, but it has still been thoroughly enjoyable none the less. For my final semester I am hoping that I will be able to finish off my core subjects and get a greater understanding in these topics, while at the same time brushing up on some more grounded and base level skills, as in IT in particular, these are often most overlooked.</p>
 									</section>
 								</div>
 							</section>
