--- a/it-interest.html
+++ b/it-interest.html
@@ -53,12 +53,14 @@
 									</section>
 								</div>
 	
+							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Why did you choose to come to RMIT?</h2>
 									<p>During high school, our class went around a number of universities as we began our VCE studies, these included Melbourne university, Deakin university, ACU, Victoria university, Monash, Swinburn and RMIT. Many of these options I ruled out due to the simple fact of travel time such as Monash and Swinburn, Melbourne university would have been a real struggle to get into, ACU and Victoria university didn’t really offer a course I was drawn towards. This left RMIT and Deakin, after attending open days for both and looking at courses for each I put RMIT as my 1st preference and Deakin as my second. Afterall, I was going to be studying a technology degree only one of those universities has technology in the name.</p>
 									</section>
 								</div>
-
+	
+							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">What do you expect to learn during your studies?</h2>
 									<p>As I am already in my last semester of my studies, I already have a good idea of what I could expect to learn at university. However, I have been absolutely thrilled by the amount of practical skills and learning that I have done in a number of different classes. Unfortunately, now with COVID-19 there has been less of this kind of work, but it has still been thoroughly enjoyable none the less. For my final semester I am hoping that I will be able to finish off my core subjects and get a greater understanding in these topics, while at the same time brushing up on some more grounded and base level skills, as in IT in particular, these are often most overlooked.</p>
