--- a/it-interest.html
+++ b/it-interest.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Assignment 1 - Personal Information</title>
+		<title>Assignment 1 - Interests in IT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Personal Information</a></h1>
+						<h1><a href="index.html">Interests in IT</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
