--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">My Profile</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -39,8 +39,8 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Assignment 1</h2>
-							<p>My Profile - Nathan Askew - s3720643</a></p>
+							<h2>Assignment 1 - My Profile</h2>
+							<p>Nathan Askew - s3720643</a></p>
 						</div>
 					</section>
 
