--- a/it-interest.html
+++ b/it-interest.html
@@ -39,7 +39,7 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Assignment 1</h2>
+							<h2>Interests in IT</h2>
 							<p>My Profile - Nathan Askew - s3720643</a></p>
 						</div>
 					</section>
