--- a/personal-information.html
+++ b/personal-information.html
@@ -43,6 +43,21 @@
 							<p>My Profile - Nathan Askew - s3720643</a></p>
 						</div>
 					</section>
+	
+				<!-- Wrapper -->
+					<section id="wrapper">
+
+						<!-- One -->
+							<section id="one" class="wrapper spotlight style1">
+								<div class="inner">
+									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic01.jpg" alt="" /></a>
+									<div class="content">
+										<h2 class="major">Personal Information</h2>
+										<p>A bit of information about me, who I am, where I'm from and what I enjoy doing.</p>
+										<a href="personal-information.html" class="special">Learn more</a>
+									</div>
+								</div>
+							</section>
 
 					<section id="four" class="wrapper alt style1">
 							<div class="inner">
