--- a/it-interest.html
+++ b/it-interest.html
@@ -43,6 +43,19 @@
 							<p>My Profile - Nathan Askew - s3720643</a></p>
 						</div>
 					</section>
+	
+				<!-- Wrapper -->
+					<section id="wrapper">
+
+						<!-- One -->
+							<section id="one" class="wrapper spotlight style1">
+								<div class="inner">
+									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic02.jpg" alt="" /></a>
+									<div class="content">
+										<h2 class="major">What is my interest in IT? What do I enjoy about it? When did this start? What sparked this interest?</h2>/p>
+									</div>
+								</div>
+							</section>
 
 
 						<!-- Four -->
