--- a/personal-information.html
+++ b/personal-information.html
@@ -52,7 +52,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">A bit of information about me, who I am, where I'm from and what I enjoy doing.</h2>/p>
+										<h2 class="major">A bit of information about me, who I am, where I'm from and what I enjoy doing.</h2>
 									</div>
 								</div>
 							</section>
