--- a/personal-information.html
+++ b/personal-information.html
@@ -64,6 +64,12 @@
 								<p>Outside of study I enjoy spending time chatting with mates online and playing a few games, taking my dogs for a walk, or I am out in the shed working on some sort of project. Whether that is fixing my car (again) or working on farm machinery or fixing up an old dirt bike. If it is mechanical or has an engine, I will tinker with it and try to get things going. However, this normally has varying levels of success.</p>
 								</section>
 							</div>
+						
+						<section id="four" class="wrapper alt style1">
+							<div class="inner">
+								<h2><a href="index.html">Back to Home.</a></h2>
+								</section>
+							</div>
 
 					</section>
 
