--- a/it-interest.html
+++ b/it-interest.html
@@ -52,7 +52,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">What is my interest in IT? What do I enjoy about it? When did this start? What sparked this interest?</h2>/p>
+										<h2 class="major">What is my interest in IT? What do I enjoy about it? When did this start? What sparked this interest?</h2>
 									</div>
 								</div>
 							</section>
