--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Ideal Job</h2>
-										<p>What is my interest in IT? What do I enjoy about it? When did this start? What sparked this interest?</p>
+										<p>What would be my ideal job in the IT industry?</p>
 										<a href="ideal-job.html">Learn more</a>
 									</div>
 								</div>
