--- a/ideal-job.html
+++ b/ideal-job.html
@@ -63,8 +63,8 @@
 								<div class="inner">
 									<h2 class="major">Pisition description:</h2>
 									<p>My ideal job would be one similar to the position shown here. It is a role as a Senior Systems Engineer, preferably in a large business or corporation. This role involves managing large IT systems, providing IT support, implementing new technologies into existing systems, working with a small team, and implementing a variety of both hardware and software.</p>
-									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/IdealJob.jpg" alt="" /></a>
-									<a href="https://www.seek.com.au/job/50322008?type=standout#searchRequestToken=f61bf496-d7d3-4a51-acc0-f75ae581046a">Ideal Job - Availible job oppurtunity</a>
+									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/IdealJob.jpg" alt="" /></a> <br>
+									<a href="https://www.seek.com.au/job/50322008?type=standout#searchRequestToken=f61bf496-d7d3-4a51-acc0-f75ae581046a">Ideal Job - Availible job oppurtunity</a> <br>
 									<a href="https://www.seek.com.au/career-advice/role/systems-engineer">Ideal Job - Overview</a>
 									</section>
 								</div>
