--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Profile</h2>
+									<h2 class="major">Quiz results</h2>
 									<p>Results from a number of online tests to determin my personality type, learning style and suggested career.</p>
+									<a href="quiz-results.html">View My Results</a>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic04.jpg" alt="" /></a>
