--- a/quiz-results.html
+++ b/quiz-results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Assignment 1 - Personal Information</title>
+		<title>Assignment 1 - Quiz results</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Personal Information</a></h1>
+						<h1><a href="quiz-results.html">Quiz results</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -39,7 +39,7 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Assignment 1</h2>
+							<h2>Quiz results</h2>
 							<p>My Profile - Nathan Askew - s3720643</a></p>
 						</div>
 					</section>
@@ -47,47 +47,10 @@
 				<!-- Wrapper -->
 					<section id="wrapper">
 
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic01.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Personal Information</h2>
-										<p>A bit of information about me, who I am, where I'm from and what I enjoy doing.</p>
-										<a href="personal-information.html" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic02.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Interest in IT</h2>
-										<p>What is my interest in IT? What do I enjoy about it? When did this start? What sparked this interest?</p>
-										<a href="it-interest.html" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic03.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Ideal Job</h2>
-										<p>What is my interest in IT? What do I enjoy about it? When did this start? What sparked this interest?</p>
-										<a href="ideal-job.html" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Profile</h2>
-									<p>Results from a number of online tests to determin my personality type, learning style and suggested career.</p>
+									<H2>Results from a number of online tests to determin my personality type, learning style and suggested career.</H2>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic04.jpg" alt="" /></a>
