--- a/quiz-results.html
+++ b/quiz-results.html
@@ -46,6 +46,15 @@
 
 				<!-- Wrapper -->
 					<section id="wrapper">
+						
+						<section id="four" class="wrapper alt style1">
+								<div class="inner">
+									<h2 class="major">Myers-Briggs Test:</h2>
+									<p>Determining your personality type.</p>
+									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic04.jpg" alt="" /></a> <br>
+									<a href="https://www.16personalities.com/" class="special">Learn more</a>
+									</section>
+								</div>
 
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
