--- a/quiz-results.html
+++ b/quiz-results.html
@@ -55,34 +55,24 @@
 									<a href="https://www.16personalities.com/" class="special">Learn more</a>
 									</section>
 								</div>
-
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
+						
+						<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<H2>Results from a number of online tests to determin my personality type, learning style and suggested career.</H2>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Myers-Briggs Test</h3>
-											<p>Determining your personality type</p>
-											<a href="https://www.16personalities.com/" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Learning Style Test</h3>
-											<p>Determin wheather you are a Auditory, Visual or Tactile learner.</p>
-											<a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Careers Test</h3>
-											<p>Find out what type of career would suit you best.</p>
-											<a href="https://www.opencolleges.edu.au/careers/career-quiz" class="special">Learn more</a>
-										</article>
+									<h2 class="major">Learning Style Test:</h2>
+									<p>Determin wheather you are a Auditory, Visual or Tactile learner.</p>
+									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic05.jpg" alt="" /></a> <br>
+									<a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml" class="special">Learn more</a>
 									</section>
 								</div>
-							</section>
-
+						
+						<section id="four" class="wrapper alt style1">
+								<div class="inner">
+									<h2 class="major">Careers Test:</h2>
+									<p>Find out what type of career would suit you best.</p>
+									<a href="https://www.opencolleges.edu.au/careers/career-quiz" class="special">Learn more</a> <br>
+									<a href="https://www.16personalities.com/" class="special">Learn more</a>
+									</section>
+								</div>
 					</section>
 
 				<!-- Footer -->
