--- a/quiz-results.html
+++ b/quiz-results.html
@@ -52,6 +52,7 @@
 									<h2 class="major">Myers-Briggs Test:</h2>
 									<p>Determining your personality type.</p>
 									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic04.jpg" alt="" /></a> <br>
+									<p>This test shows that I am more of a Introverted than Extraverted, Observant than Intuitive, Thinking than Feeling, Judging than Prospecting and Assertive than turbulent. This has placed me as a Logistician personality type, simply refered to as ISTJ-a. You can learn more about this personality type by clicking Learn More bellow.</p> <br>
 									<a href="https://www.16personalities.com/" class="special">Learn more</a>
 									</section>
 								</div>
@@ -61,6 +62,7 @@
 									<h2 class="major">Learning Style Test:</h2>
 									<p>Determin wheather you are a Auditory, Visual or Tactile learner.</p>
 									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic05.jpg" alt="" /></a> <br>
+									<p>This test shows that I am primerily a Visual learner, followed by Auditory and then lastly Tactile. From this I know that I will be most likley to absorb and retain information that is presented to me in a visual way. I completly agree with this as I often go to YouTube videos and recordings to learn new skills. You can learn more about this personality type by clicking Learn More bellow.</p> <br>
 									<a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml" class="special">Learn more</a>
 									</section>
 								</div>
@@ -69,7 +71,8 @@
 								<div class="inner">
 									<h2 class="major">Careers Test:</h2>
 									<p>Find out what type of career would suit you best.</p>
-									<a href="https://www.opencolleges.edu.au/careers/career-quiz" class="special">Learn more</a> <br>
+									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic06.jpg" alt="" /></a> <br>
+									<p>This test is quite similar to the Myers-Briggs Test shown before however there is more of a focus on what career categories and oppertunities would best suit you based on your results. For me this test showed that I am again a Logistician and therefore roles that would suit me are Accounting and Fincance, Administration, Management, Business, Information Technology and Education and Childcare. You can learn more about this personality type by clicking Learn More bellow.</p> <br>
 									<a href="https://www.16personalities.com/" class="special">Learn more</a>
 									</section>
 								</div>
