--- a/personal-information.html
+++ b/personal-information.html
@@ -61,7 +61,10 @@
 							<div class="inner">
 								<h2 class="major">Bio.</h2>
 								<p>I was born in England and moved over to Australia when I was 7, while in Australia I have completed all high schooling through VCE and also undertook a VET subject at the Gordon which got me a partial completion of a cert 3 in information, digital media and technology. I then moved into university and began studying a Bachelor of Business in information systems. I am now in my final semester of a three-year degree.</p>
-								<p>Outside of study I enjoy spending time chatting with mates online and playing a few games, taking my dogs for a walk, or I am out in the shed working on some sort of project. Whether that is fixing my car (again) or working on farm machinery or fixing up an old dirt bike. If it is mechanical or has an engine, I will tinker with it and try to get things going. However, this normally has varying levels of success.</p>
+								<p>Outside of study I enjoy spending time in Discord chatting with mates online and playing a few games such as CS:GO, Overwatch, RimWorld, Dirt Rally 2.0, etc. When the Weather is good I'm often out taking my dogs for a walk or working in the yard, when it's crapy wheather I'm normaly out in the shed working on one of many different projects. Whether that is fixing my car (again) or working on some old farm machinery or fixing up an old dirt bike. If it is mechanical or has an engine, I'm morre than happy to tinker with it and try to get the thing going. However, this normally has varying levels of success.</p>
+								<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/PersonalInfo1.jpg" alt="" /></a>
+								<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/PersonalInfo2.jpg" alt="" /></a>
+								<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/PersonalInfo3.jpg" alt="" /></a>
 								</section>
 							</div>
 						
