--- a/personal-information.html
+++ b/personal-information.html
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Personal Information</a></h1>
+						<h1><a href="personal-information.html">Personal Information</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
