--- a/it-interest.html
+++ b/it-interest.html
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Interests in IT</a></h1>
+						<h1><a href="it-interests.html">Interests in IT</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
