--- a/it-interest.html
+++ b/it-interest.html
@@ -30,6 +30,7 @@
 								<li><a href="it-interest.html">Interests in IT</a></li>
 								<li><a href="ideal-job.html">Ideal Job</a></li>
 								<li><a href="quiz-results.html">Quiz Results</a></li>
+								<li><a href="project-idea.html">Project Idea</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
