--- a/project-idea.html
+++ b/project-idea.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Assignment 1 - Personal Information</title>
+		<title>Assignment 1 - Project Idea</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="personal-information.html">Personal Information</a></h1>
+						<h1><a href="personal-information.html">Project Idea</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -40,7 +40,7 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Personal Information</h2>
+							<h2>Project Idea</h2>
 							<p>My Profile - Nathan Askew - s3720643</a></p>
 						</div>
 					</section>
