--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
 									</div>
 								</div>
 							</section>
+						
+						<section id="three" class="wrapper spotlight style3">
+								<div class="inner">
+									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic03.jpg" alt="" /></a>
+									<div class="content">
+										<h2 class="major">Project Idea</h2>
+										<p>What is my project idea?</p>
+										<a href="project-idea.html">Learn more</a>
+									</div>
+								</div>
+							</section>
 
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
