--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="https://nathan-askew.github.io/COSC1078/images/ProjectIdea2.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">IT Project</h2>
 										<p>What is my IT Project?</p>
-										<a href="it-interest.html">Learn more</a>
+										<a href="project-idea.html">Learn more</a>
 									</div>
 								</div>
 							</section>
